; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/m4/extr_eval.c_map.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/m4/extr_eval.c_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@map.frombis = internal global [257 x i8] zeroinitializer, align 16
@map.tobis = internal global [257 x i8] zeroinitializer, align 16
@map.mapvec = internal global [256 x i8] c"\00\01\02\03\04\05\06\07\08\09\0A\0B\0C\0D\0E\0F\10\11\12\13\14\15\16\17\18\19\1A\1B\1C\1D\1E\1F !\22#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~\7F\80\81\82\83\84\85\86\87\88\89\8A\8B\8C\8D\8E\8F\90\91\92\93\94\95\96\97\98\99\9A\9B\9C\9D\9E\9F\A0\A1\A2\A3\A4\A5\A6\A7\A8\A9\AA\AB\AC\AD\AE\AF\B0\B1\B2\B3\B4\B5\B6\B7\B8\B9\BA\BB\BC\BD\BE\BF\C0\C1\C2\C3\C4\C5\C6\C7\C8\C9\CA\CB\CC\CD\CE\CF\D0\D1\D2\D3\D4\D5\D6\D7\D8\D9\DA\DB\DC\DD\DE\DF\E0\E1\E2\E3\E4\E5\E6\E7\E8\E9\EA\EB\EC\ED\EE\EF\F0\F1\F2\F3\F4\F5\F6\F7\F8\F9\FA\FB\FC\FD\FE\FF", align 16
@mimic_gnu = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i8*)* @map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @map(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8, align 1
  %11 = alloca i8, align 1
  %12 = alloca i32, align 4
  %13 = alloca [256 x i8], align 16
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i8, i8* %14, align 1
  %16 = icmp ne i8 %15, 0
  br i1 %16, label %17, label %105

17:                                               ; preds = %4
  %18 = load i64, i64* @mimic_gnu, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i8*, i8** %7, align 8
  %22 = call i8* @handledash(i8* getelementptr inbounds ([257 x i8], [257 x i8]* @map.frombis, i64 0, i64 0), i8* getelementptr inbounds ([257 x i8], [257 x i8]* @map.frombis, i64 0, i64 256), i8* %21)
  store i8* %22, i8** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = call i8* @handledash(i8* getelementptr inbounds ([257 x i8], [257 x i8]* @map.tobis, i64 0, i64 0), i8* getelementptr inbounds ([257 x i8], [257 x i8]* @map.tobis, i64 0, i64 256), i8* %23)
  store i8* %24, i8** %8, align 8
  br label %25

25:                                               ; preds = %20, %17
  %26 = load i8*, i8** %7, align 8
  store i8* %26, i8** %9, align 8
  store i32 0, i32* %12, align 4
  br label %27

27:                                               ; preds = %34, %25
  %28 = load i32, i32* %12, align 4
  %29 = icmp slt i32 %28, 256
  br i1 %29, label %30, label %37

30:                                               ; preds = %27
  %31 = load i32, i32* %12, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds [256 x i8], [256 x i8]* %13, i64 0, i64 %32
  store i8 0, i8* %33, align 1
  br label %34

34:                                               ; preds = %30
  %35 = load i32, i32* %12, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %12, align 4
  br label %27

37:                                               ; preds = %27
  br label %38

38:                                               ; preds = %69, %37
  %39 = load i8*, i8** %7, align 8
  %40 = load i8, i8* %39, align 1
  %41 = icmp ne i8 %40, 0
  br i1 %41, label %42, label %70

42:                                               ; preds = %38
  %43 = load i8*, i8** %7, align 8
  %44 = load i8, i8* %43, align 1
  %45 = zext i8 %44 to i64
  %46 = getelementptr inbounds [256 x i8], [256 x i8]* %13, i64 0, i64 %45
  %47 = load i8, i8* %46, align 1
  %48 = icmp ne i8 %47, 0
  br i1 %48, label %60, label %49

49:                                               ; preds = %42
  %50 = load i8*, i8** %8, align 8
  %51 = load i8, i8* %50, align 1
  %52 = load i8*, i8** %7, align 8
  %53 = load i8, i8* %52, align 1
  %54 = zext i8 %53 to i64
  %55 = getelementptr inbounds [256 x i8], [256 x i8]* @map.mapvec, i64 0, i64 %54
  store i8 %51, i8* %55, align 1
  %56 = load i8*, i8** %7, align 8
  %57 = load i8, i8* %56, align 1
  %58 = zext i8 %57 to i64
  %59 = getelementptr inbounds [256 x i8], [256 x i8]* %13, i64 0, i64 %58
  store i8 1, i8* %59, align 1
  br label %60

60:                                               ; preds = %49, %42
  %61 = load i8*, i8** %7, align 8
  %62 = getelementptr inbounds i8, i8* %61, i32 1
  store i8* %62, i8** %7, align 8
  %63 = load i8*, i8** %8, align 8
  %64 = load i8, i8* %63, align 1
  %65 = icmp ne i8 %64, 0
  br i1 %65, label %66, label %69

66:                                               ; preds = %60
  %67 = load i8*, i8** %8, align 8
  %68 = getelementptr inbounds i8, i8* %67, i32 1
  store i8* %68, i8** %8, align 8
  br label %69

69:                                               ; preds = %66, %60
  br label %38

70:                                               ; preds = %38
  br label %71

71:                                               ; preds = %89, %70
  %72 = load i8*, i8** %6, align 8
  %73 = load i8, i8* %72, align 1
  %74 = icmp ne i8 %73, 0
  br i1 %74, label %75, label %90

75:                                               ; preds = %71
  %76 = load i8*, i8** %6, align 8
  %77 = getelementptr inbounds i8, i8* %76, i32 1
  store i8* %77, i8** %6, align 8
  %78 = load i8, i8* %76, align 1
  store i8 %78, i8* %10, align 1
  %79 = load i8, i8* %10, align 1
  %80 = zext i8 %79 to i64
  %81 = getelementptr inbounds [256 x i8], [256 x i8]* @map.mapvec, i64 0, i64 %80
  %82 = load i8, i8* %81, align 1
  store i8 %82, i8* %11, align 1
  %83 = load i8, i8* %11, align 1
  %84 = load i8*, i8** %5, align 8
  store i8 %83, i8* %84, align 1
  %85 = icmp ne i8 %83, 0
  br i1 %85, label %86, label %89

86:                                               ; preds = %75
  %87 = load i8*, i8** %5, align 8
  %88 = getelementptr inbounds i8, i8* %87, i32 1
  store i8* %88, i8** %5, align 8
  br label %89

89:                                               ; preds = %86, %75
  br label %71

90:                                               ; preds = %71
  br label %91

91:                                               ; preds = %95, %90
  %92 = load i8*, i8** %9, align 8
  %93 = load i8, i8* %92, align 1
  %94 = icmp ne i8 %93, 0
  br i1 %94, label %95, label %104

95:                                               ; preds = %91
  %96 = load i8*, i8** %9, align 8
  %97 = load i8, i8* %96, align 1
  %98 = load i8*, i8** %9, align 8
  %99 = load i8, i8* %98, align 1
  %100 = zext i8 %99 to i64
  %101 = getelementptr inbounds [256 x i8], [256 x i8]* @map.mapvec, i64 0, i64 %100
  store i8 %97, i8* %101, align 1
  %102 = load i8*, i8** %9, align 8
  %103 = getelementptr inbounds i8, i8* %102, i32 1
  store i8* %103, i8** %9, align 8
  br label %91

104:                                              ; preds = %91
  br label %105

105:                                              ; preds = %104, %4
  %106 = load i8*, i8** %5, align 8
  store i8 0, i8* %106, align 1
  ret void
}

declare dso_local i8* @handledash(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
